[FIX] background image covers whole background when the how to play button is pressed

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -4,13 +4,15 @@
     border:none;
 }
 
-body{
-    background: url(/assests/images/space-background.jpg) no-repeat center center;
-    background-size: cover;
+body, html{
+    height: 100%;
     color: white;
     font-family: 'Oswald', sans-serif;
-    
+}
 
+body{
+    background: url(/assests/images/space-background.jpg) no-repeat center center fixed;
+    background-size: cover;
 }
 
 #heading-area{
